# UGVC-Rover-26

./: .gitignore  .gitmodules  .project  ErrorValue.py  README.md  lane_detection.py
.devcontainer/console/: devcontainer.json
.devcontainer/console-local-linux/: Dockerfile  devcontainer.json
.devcontainer/reports/: Dockerfile  devcontainer.json  post-install.sh
.devcontainer/rover_ws-pixi/: devcontainer.json
console/: .gitignore  README.md  pixi.toml  pyproject.toml
console/src/console/: __main__.py
console/src/rover_interfaces/: CMakeLists.txt
field/: README.md
firmware/: .gitignore  .mxproject  CMakeLists.txt  README.md  Rover.ioc
firmware/untitled/: platformio.ini
killSwitch_transmitter/: platformio.ini
killSwitch_transmitter/src/: main.cpp
network/: README.md
reports/: README.md
reports/PDR/: main.tex
reports/TDR/: main.tex  preamble.sty  references.bib
ros2_rover/: package.xml  setup.cfg  setup.py
ros2_rover/ros2_rover/: cmd_mux_node.py  test_cmd_mux.py
rover_ws/: .gitignore  DOCUMENTATION.md  README.md  cyclonedds.xml  frames_2026-07-09_15.10.49.gv  pixi.toml
rover_ws/PhyPhox/: README.md  phyphox_api_adb.py  phyphox_ros_node_adb.py
rover_ws/install/: local_setup.bat  local_setup.ps1  setup.bat  setup.ps1
rover_ws/log/: latest_build
rover_ws/src/: README.md  joystick_controls.py
rover_ws/src/road_detector/: README.md  package.xml  setup.py
rover_ws/src/road_detector/R&D/: README.md
rover_ws/src/road_detector/R&D/vision/: homography.py  pipeline.py
rover_ws/src/road_detector/config/: lane_follower_params.yaml  params.yaml  params_sim.yaml  params_test.yaml  pointcloud_logger_params.yaml  video_publisher_params.yaml
rover_ws/src/road_detector/launch/: all.launch.py  lane_follower_launch.py  road_detector_launch.py  road_detector_test_launch.py
rover_ws/src/road_detector/road_detector/: lane_follower_node.py  mock_test_node.py  pointcloud_logger_node.py  road_detector_node.py  video_publisher_node.py  video_viewer_node.py
rover_ws/src/road_detector/road_detector/cv_code/: homography.py  pipeline.py  road_features_detector.py
rover_ws/src/rover_interfaces/: CMakeLists.txt  package.xml
rover_ws/src/rover_interfaces/action/: GenerateBezierPath.action
rover_ws/src/rover_interfaces/msg/: Speed.msg  WheelVel.msg
rover_ws/src/ugvc_msgs/: CMakeLists.txt  package.xml
rover_ws/src/ugvc_msgs/msg/: RoverStatus.msg
rover_ws/vision/: .gitignore  README.md  circle_detection_bev.py  homography.py  lane_detection.py  pipeline.py  road_features_detector.py
station/: README.md
test_arduino_nrf/: platformio.ini
(+301 files in other folders)
