<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>road_detector</name>
  <version>0.0.0</version>
  <description>TODO: 
    subscribes to video stream,
    detects white road lane markings and white pot holes
    then publishes the detected markings and potholes as a point clouds for Nav2
  </description>
  <maintainer email="abdelaziz.islam.galal@gmail.com">abdelaziz</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
